--- a/course-04/exercises/lesson-2/create-item-api/package.json
+++ b/course-04/exercises/lesson-2/create-item-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "zip -r create-group.zip ."
   },
   "author": "A. LEMAIRE",
   "license": "UNLICENSED",
